--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: rhyzom
 
 # Short bio or description (displayed in the header)
-description: minimal blog & arbitrary notes
+description: minimal blog & arbitrary disordered notes
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i.imgur.com/LheTj3Q.png
+avatar: https://i.imgur.com/e7VTxRy.jpg
 
 #
 # Flags below are optional
